# OpenGL

./: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
Includes/: shader.cpp  shader.h  utils.h
Resources/Texture/: Ball-256x256.tiff
